gobmkida/c1/accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:662:7: error: use of undeclared identifier 'accumulate_influence_working_area_initialized'
if ( !accumulate_influence_working_area_initialized ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:664:50: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
memset( accumulate_influence_working, 0, sizeof( accumulate_influence_working)); 
                                                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                 accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:664:9: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
memset( accumulate_influence_working, 0, sizeof( accumulate_influence_working)); 
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
        accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:665:1: error: use of undeclared identifier 'accumulate_influence_working_area_initialized'
accumulate_influence_working_area_initialized = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:668:1: error: use of undeclared identifier 'accumulate_influence_queue'; did you mean 'accumulate_influence'?
accumulate_influence_queue[0] = pos; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:668:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_queue[0] = pos; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:670:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[pos] = strength; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:670:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[pos] = strength; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:675:7: error: use of undeclared identifier 'accumulate_influence_queue'
v10 = accumulate_influence_queue[v9]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:687:25: error: use of undeclared identifier 'accumulate_influence_working'
v14 = inv_attenuation * accumulate_influence_working[v10] / 4096; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:709:7: error: use of undeclared identifier 'accumulate_influence_working'
v22 = accumulate_influence_working[v19]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:712:1: error: use of undeclared identifier 'accumulate_influence_queue'; did you mean 'accumulate_influence'?
accumulate_influence_queue[( int)v37] = v19; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:712:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_queue[( int)v37] = v19; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:715:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[v19] = v21 + v22; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:715:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[v19] = v21 + v22; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:728:28: error: use of undeclared identifier 'stones_on_board_stone_count_for_position'
v26 = *( int *)( ( char *)&stones_on_board_stone_count_for_position + v25 * 4); 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:751:7: error: use of undeclared identifier 'accumulate_influence_working'
v33 = accumulate_influence_working[v27]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:754:1: error: use of undeclared identifier 'accumulate_influence_queue'; did you mean 'accumulate_influence'?
accumulate_influence_queue[( int)v37] = v27; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:754:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_queue[( int)v37] = v27; 
^~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:757:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[v27] = v32 + v33; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:757:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[v27] = v32 + v33; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:776:7: error: use of undeclared identifier 'accumulate_influence_queue'
v35 = accumulate_influence_queue[v34]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:777:7: error: use of undeclared identifier 'accumulate_influence_working'
v36 = accumulate_influence_working[v35]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:780:1: error: use of undeclared identifier 'accumulate_influence_working'; did you mean 'accumulate_influence'?
accumulate_influence_working[v35] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
accumulate_influence
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:618:7: note: 'accumulate_influence' declared here
void  accumulate_influence( 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/engine/influence.c:780:1: error: subscript of pointer to function type 'void (int, int, int, int, const int *, const char *, int *)'
accumulate_influence_working[v35] = 0; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~
25 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accumulate_influence/src/obj/1/influence.o] Error 1
